--- a/slick/trunk/Slick/.classpath
+++ b/slick/trunk/Slick/.classpath
@@ -10,8 +10,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/jnlp.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tinylinepp.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl.jar">
+	<classpathentry exported="true" kind="lib" path="lib/lwjgl.jar" sourcepath="/Platformer/docsource/lwjgl-source-2.8.4.zip">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Platformer/docsource/lwjgl-docs-2.8.4.zip!/javadoc"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Slick1/native/macosx"/>
 		</attributes>
 	</classpathentry>
